--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
@@ -55,7 +56,7 @@ dependencies {
     compile("org.apache.httpcomponents:httpclient:4.5")
     compile("me.champeau.jlangdetect:jlangdetect-extra:0.4")
     compile("javax:javaee-api:7.0")
-    testCompile("org.springframework.boot:spring-boot-starter-getPopularMedia")
+    testCompile("org.springframework.boot:spring-boot-starter")
 }
 
 
