--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ idea {
 }
 
 jar {
-    baseName = 'instagram.analyzer'
-    version = '0.0.1-SNAPSHOT'
+    baseName = 'instagram-analyzer'
+    version = '0.1.0-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -50,7 +50,6 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile("org.springframework.boot:spring-boot-starter-remote-shell")
     compile("org.springframework.data:spring-data-cassandra:1.2.2.RELEASE")
     compile("com.github.sola92:instagram-java:1.3.9")
     compile("org.apache.httpcomponents:httpclient:4.5")
